# encodedir

./: Cargo.toml  Makefile  README.md  install_debug.sh
dist-scripts/: install.sh
encodedir-gtk/: Cargo.toml  Makefile
encodedir-gtk/src/: main.rs
encodedir-gtk/src/ui/: filedialog.rs
src/: encode.rs  get_files.rs  get_input.rs  main.rs  read_cfg.rs  statements.rs
