[package]
name = "encodedir"
version = "1.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
toml = "0.5"
color-eyre = { version = "0.6", default-features = false }
clap = { version = "4.4.12", features = ["cargo"] }

[profile.release]
lto = true
strip = true
