[package]
name = "encodedir"
version = "1.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
toml = "0.5"
color-eyre = { version = "0.6", default-features = false }
clap = { version = "4.4.12", features = ["cargo"] }
shell-words = "1.1.0"

[profile.release]
lto = true
strip = true
